--- a/src/app/components/liderazgo/liderazgo.component.html
+++ b/src/app/components/liderazgo/liderazgo.component.html
@@ -1,37 +1,31 @@
 <div class="ldr">
-  <!-- Encabezado -->
-  <div class="ldr__header">Agregar Liderazgo</div>
+  <div class="ldr__header">Liderazgo</div>
 
-  <!-- Buscador centrado -->
-  <div class="ldr__search">
-    <mat-icon>search</mat-icon>
-    <input [formControl]="search" placeholder="Buscar ministerio" />
-  </div>
+  <!-- Buscar + Agregar -->
+  <div class="ldr__toolbar">
+    <div class="search">
+      <mat-icon>search</mat-icon>
+      <input [formControl]="search" placeholder="Buscar ministerio" />
+    </div>
 
-  <!-- Agregar ministerio -->
-  <div class="ldr__add">
-    <mat-form-field appearance="outline" class="grow">
-      <mat-label>Introduce el nombre del nuevo ministerio</mat-label>
-      <input matInput [formControl]="newMinistry" />
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="addMinistry()">+ Agregar</button>
+    <div class="add">
+      <mat-form-field appearance="outline" class="grow">
+        <mat-label>Introduce el nombre del nuevo ministerio</mat-label>
+        <input matInput [formControl]="nombreNuevo" />
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="agregar()">+ Agregar</button>
+    </div>
   </div>
 
   <!-- Lista -->
   <div class="ldr__list">
-    <div class="row" *ngFor="let m of filtered">
-      <div class="name" [matTooltip]="m.nombre">{{ m.nombre }}</div>
-      <div class="count">Miembros: {{ m.totalMiembros }}</div>
+    <div class="row" *ngFor="let m of filtrados">
+      <div class="name">{{ m.nombre }}</div>
       <div class="actions">
         <button mat-raised-button class="pill pill--blue" (click)="openMembers(m)">Integrantes</button>
-        <button mat-raised-button color="accent" class="pill" (click)="openEdit(m)">Editar</button>
-        <button mat-raised-button color="warn" class="pill" (click)="remove(m.id)">X Eliminar</button>
+        <button mat-raised-button color="accent" class="pill" (click)="editar(m)">Editar</button>
+        <button mat-raised-button color="warn" class="pill" (click)="eliminar(m)">X Eliminar</button>
       </div>
-    </div>
-
-    <!-- vacío -->
-    <div class="empty" *ngIf="filtered.length === 0">
-      No hay resultados para esa búsqueda.
     </div>
   </div>
 </div>
