Se realizan cambios para asociar un rol a un miembro
Se realizan cambios para asociar un rol a un miembro

--- a/src/app/components/liderazgo/dialog-integrantes/dialog-integrantes.component.html
+++ b/src/app/components/liderazgo/dialog-integrantes/dialog-integrantes.component.html
@@ -63,7 +63,11 @@
             </mat-select>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" (click)="agregar()">Agregar</button>
+<button mat-raised-button color="primary"
+        (click)="agregar()"
+        [disabled]="!personaSelCtrl.value || !rolSeleccionadoId">
+  Agregar
+</button>
         </div>
 
         <div class="tabla" *ngIf="!cargando; else loadingTpl">
