--- a/src/app/components/liderazgo/dialog-ministry-members/dialog-ministry-members.component.html
+++ b/src/app/components/liderazgo/dialog-ministry-members/dialog-ministry-members.component.html
@@ -2,7 +2,7 @@
   <div class="dlg__title">Integrantes del Liderazgo</div>
 
   <!-- Barra agregar -->
-  <div class="bar">
+  <!-- <div class="bar">
     <mat-form-field appearance="outline" class="w-40">
       <mat-label>Buscar persona</mat-label>
       <input type="text" matInput [formControl]="personaCtrl" [matAutocomplete]="auto" />
@@ -26,7 +26,7 @@
     </mat-form-field>
 
     <button mat-raised-button color="primary" (click)="agregar()">+ Agregar</button>
-  </div>
+  </div> -->
 
   <!-- Tabla -->
   <div class="table-wrap" *ngIf="!cargando; else loading">
