Se agrega regreso al dashboard
Se agrega regreso al dashboard

--- a/src/app/components/liderazgo/liderazgo.component.html
+++ b/src/app/components/liderazgo/liderazgo.component.html
@@ -29,3 +29,9 @@
     </div>
   </div>
 </div>
+<!-- Botón regresar -->
+<div class="ldr__footer">
+  <button mat-stroked-button color="accent" class="btn-back" (click)="regresarDashboard()">
+    <mat-icon>arrow_back</mat-icon> Regresar
+  </button>
+</div>
