Se suben cambios para generación de certificados
Se suben cambios para generación de certificados

--- a/src/app/components/certificados/dialog-certificado/dialog-certificado/dialog-certificado.component.html
+++ b/src/app/components/certificados/dialog-certificado/dialog-certificado/dialog-certificado.component.html
@@ -15,143 +15,66 @@
     <ng-container [ngSwitch]="currentType">
 
       <!-- ======= MEMBRESÍA ======= -->
-<!-- ======= MEMBRESÍA ======= -->
-<ng-container *ngSwitchCase="'Membresía'">
-  <mat-form-field appearance="outline" class="w-full">
-    <mat-label>Miembro</mat-label>
-    <input matInput placeholder="Nombre del miembro" formControlName="memberName" />
-  </mat-form-field>
-</ng-container>
+      <!-- ======= MEMBRESÍA ======= -->
+      <ng-container *ngSwitchCase="'Membresía'">
+        <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Miembro</mat-label>
+          <input matInput placeholder="Nombre del miembro" formControlName="memberName" />
+        </mat-form-field>
+      </ng-container>
 
 
       <!-- ======= PRESENTACIÓN DE NIÑOS ======= -->
       <ng-container *ngSwitchCase="'Presentación de Niños'">
+        <!-- Nombre del niño -->
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Miembro</mat-label>
-          <input matInput placeholder="Nombre del niño" formControlName="childName" />
+          <mat-label>Nombre del niño(a)</mat-label>
+          <input matInput formControlName="childName" />
         </mat-form-field>
 
-        <!-- Padre -->
-        <div class="sect-title">Padre</div>
-        <div class="radio-row">
-          Es miembro de la iglesia:
-          <mat-radio-group formControlName="fatherIsMember">
-            <mat-radio-button [value]="true" style="margin-right:12px;">Sí</mat-radio-button>
-            <mat-radio-button [value]="false">No</mat-radio-button>
-          </mat-radio-group>
-        </div>
+        <!-- Padre (texto) -->
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Seleccione a una persona</mat-label>
-          <mat-select formControlName="fatherId"
-                      [disabled]="form?.get('fatherIsMember')?.value === false">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
+          <mat-label>Nombre del padre</mat-label>
+          <input matInput formControlName="fatherName" />
         </mat-form-field>
 
-        <!-- Madre -->
-        <div class="sect-title">Madre</div>
-        <div class="radio-row">
-          Es miembro de la iglesia:
-          <mat-radio-group formControlName="motherIsMember">
-            <mat-radio-button [value]="true" style="margin-right:12px;">Sí</mat-radio-button>
-            <mat-radio-button [value]="false">No</mat-radio-button>
-          </mat-radio-group>
-        </div>
+        <!-- Madre (texto) -->
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Seleccione a una persona</mat-label>
-          <mat-select formControlName="motherId"
-                      [disabled]="form?.get('motherIsMember')?.value === false">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <!-- Pastor -->
-        <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Pastor</mat-label>
-          <mat-select formControlName="pastorId">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <!-- Fechas y testigo -->
-        <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Fecha de nacimiento</mat-label>
-          <input matInput type="date" formControlName="childBirthDate" />
+          <mat-label>Nombre de la madre</mat-label>
+          <input matInput formControlName="motherName" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Testigo</mat-label>
-          <input matInput formControlName="witnessName" />
+          <mat-label>Lugar y fecha de nacimiento</mat-label>
+          <input matInput formControlName="lugarFechaNacimiento" placeholder="Ej: Guatemala, 01/10/2025" />
         </mat-form-field>
       </ng-container>
 
       <!-- ======= BAUTISMO ======= -->
       <ng-container *ngSwitchCase="'Bautismo'">
         <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Nombre del miembro</mat-label>
+          <input matInput formControlName="nombreMiembro" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="w-full">
           <mat-label>Fecha de bautismo</mat-label>
           <input matInput type="date" formControlName="baptismDate" />
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Miembro</mat-label>
-          <mat-select formControlName="memberId">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Pastor</mat-label>
-          <mat-select formControlName="pastorId">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
         </mat-form-field>
       </ng-container>
 
       <!-- ======= MATRIMONIO ======= -->
       <ng-container *ngSwitchCase="'Matrimonio'">
-        <!-- Esposo -->
-        <div class="sect-title">Esposo</div>
-        <div class="radio-row">
-          Es miembro de la iglesia:
-          <mat-radio-group formControlName="husbandIsMember">
-            <mat-radio-button [value]="true" style="margin-right:12px;">Sí</mat-radio-button>
-            <mat-radio-button [value]="false">No</mat-radio-button>
-          </mat-radio-group>
-        </div>
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Seleccione a una persona</mat-label>
-          <mat-select formControlName="husbandId"
-                      [disabled]="form?.get('husbandIsMember')?.value === false">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
+          <mat-label>Nombre del esposo</mat-label>
+          <input matInput formControlName="husbandName" />
         </mat-form-field>
 
-        <!-- Esposa -->
-        <div class="sect-title">Esposa</div>
-        <div class="radio-row">
-          Es miembro de la iglesia:
-          <mat-radio-group formControlName="wifeIsMember">
-            <mat-radio-button [value]="true" style="margin-right:12px;">Sí</mat-radio-button>
-            <mat-radio-button [value]="false">No</mat-radio-button>
-          </mat-radio-group>
-        </div>
         <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Seleccione a una persona</mat-label>
-          <mat-select formControlName="wifeId"
-                      [disabled]="form?.get('wifeIsMember')?.value === false">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <!-- Pastor -->
-        <mat-form-field appearance="outline" class="w-full">
-          <mat-label>Pastor</mat-label>
-          <mat-select formControlName="pastorId">
-            <mat-option *ngFor="let p of people" [value]="p.id">{{ p.name }}</mat-option>
-          </mat-select>
+          <mat-label>Nombre de la esposa</mat-label>
+          <input matInput formControlName="wifeName" />
         </mat-form-field>
       </ng-container>
-
     </ng-container>
 
     <!-- ======= FECHA DE EXPEDICIÓN (común) ======= -->
