Se agrega botón regresar en finanzas
Se agrega botón regresar en finanzas

--- a/src/app/components/finanzas/finanzas.component.html
+++ b/src/app/components/finanzas/finanzas.component.html
@@ -74,4 +74,8 @@
       </table>
     </div>
   </section>
+
+    <div class="footer">
+    <button mat-stroked-button color="primary" (click)="regresar()">Regresar</button>
+  </div>
 </div>
