--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -1,14 +1,28 @@
-<div class="wrap">
-  <div class="header">Miembros</div>
+<div class="card">
+  <div class="card__header">MIEMBROS</div>
 
-  <div class="body">
-    <button mat-raised-button color="primary" class="btn" (click)="agregarPersona()">
-      Agregar Persona
-    </button>
+  <div class="toolbar">
+    <div class="btns">
+      <button mat-raised-button color="primary" (click)="agregarPersona()">+ Agregar Persona</button>
+      <button mat-raised-button color="primary" (click)="agregarFamilia()">+ Agregar Familia</button>
+    </div>
 
-    <button mat-raised-button color="primary" class="btn" (click)="agregarFamilia()">
-      Agregar Familia
-    </button>
+    <div class="search">
+      <mat-icon>search</mat-icon>
+      <input [formControl]="search" placeholder="Buscar" />
+    </div>
+  </div>
+
+  <div class="table">
+    <table mat-table [dataSource]="filtered">
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let r">{{ r.nombre }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="['nombre']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['nombre']"></tr>
+    </table>
   </div>
 
   <div class="footer">
